"""docker-basic_router — Legacy minimal SONiC basic router container.

This image uses sonic-common-layer as its base (NOT the swss layer),
since it is a legacy minimal image that does not need libswsscommon
or libsairedis.

Layer accounting:
  Layer 0: gcr.io/distroless/base-debian12           ~20 MB   (upstream, pinned)
  Layer 1: //dockers/sonic-common-layer               ~130 MB  (supervisord, libs)
  Layer 2: THIS FILE                                  <50 MB   (basic_router + configs)
  Total:                                              <200 MB  (well under 300 MB budget)
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:strip_layer.bzl", "stripped_layer")
load("//rules/bazel/j2:j2.bzl", "j2_render")

package(default_visibility = ["//visibility:public"])

# -- config + scripts layer ----------------------------------------------------

pkg_tar(
    name = "basic_router_config_layer",
    srcs = [
        "start.sh",
        "supervisord.conf",
    ],
    remap_paths = {
        "start.sh": "/usr/bin/start.sh",
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
    },
    mode = "0755",
)

# -- Size budget enforcement ---------------------------------------------------

stripped_layer(
    name = "basic_router_config_layer_stripped",
    src = ":basic_router_config_layer",
    size_budget_mb = 250,
)

# -- docker-basic_router OCI image --------------------------------------------

sonic_oci_image(
    name = "docker_basic_router",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":basic_router_config_layer_stripped",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-basic_router",
        "org.opencontainers.image.description": "SONiC legacy basic router",
        "sonic.container.name": "basic_router",
    },
)
