load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "basic_router_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_basic_router",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":basic_router_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-basic_router",
        "sonic.container.name": "basic_router",
    },
)
