"""docker-database — SONiC Redis database service container.

Phase 2: collapsed to sonic-common-layer base.
Provides redis-server/redis-tools plus sonic-db-cli and sonic-dash-api.
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:strip_layer.bzl", "stripped_layer")
load("//rules/bazel/j2:j2.bzl", "j2_render")

package(default_visibility = ["//visibility:public"])

# ── Jinja2 templates rendered at build time ──────────────────────────────────

j2_render(
    name = "supervisord_conf",
    template = "supervisord.conf.j2",
    vars = "//files/build_vars:database.json",
    output = "supervisord.conf",
)

j2_render(
    name = "critical_processes_rendered",
    template = "critical_processes.j2",
    vars = "//files/build_vars:database.json",
    output = "critical_processes",
)

j2_render(
    name = "database_config_json",
    template = "database_config.json.j2",
    vars = "//files/build_vars:database.json",
    output = "database_config.json",
)

j2_render(
    name = "database_global_json",
    template = "database_global.json.j2",
    vars = "//files/build_vars:database.json",
    output = "database_global.json",
)

j2_render(
    name = "multi_database_config_json",
    template = "multi_database_config.json.j2",
    vars = "//files/build_vars:database.json",
    output = "multi_database_config.json",
)

# ── Apt packages layer ───────────────────────────────────────────────────────

genrule(
    name = "database_apt_layer",
    srcs = [],
    outs = ["database_apt_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT

apt-get -y install --no-install-recommends \
  -o Dir::Cache=$$ROOTFS/var/cache/apt \
  -o Dir::State=$$ROOTFS/var/lib/apt \
  redis-server redis-tools

rm -rf $$ROOTFS/var/cache $$ROOTFS/var/lib/apt
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# ── Service debs layer ───────────────────────────────────────────────────────

genrule(
    name = "database_binary_layer",
    srcs = [
        "//src/sonic-swss-common:sonic_db_cli",
        "//src/sonic-dash-api:sonic_dash_api",
    ],
    outs = ["database_binary_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
for deb in $(SRCS); do
    dpkg-deb -x "$$deb" "$$ROOTFS"
done
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "database_config_layer",
    srcs = [
        ":supervisord_conf",
        ":critical_processes_rendered",
        ":database_config_json",
        ":database_global_json",
        ":multi_database_config_json",
        "docker-database-init.sh",
        "flush_unused_database",
    ],
    remap_paths = {
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "database_config.json": "/etc/sonic/database_config.json",
        "database_global.json": "/etc/sonic/database_global.json",
        "multi_database_config.json": "/etc/sonic/multi_database_config.json",
        "docker-database-init.sh": "/usr/local/bin/docker-database-init.sh",
        "flush_unused_database": "/usr/local/bin/flush_unused_database",
    },
    mode = "0755",
)

# ── Size budget enforcement ──────────────────────────────────────────────────

stripped_layer(
    name = "database_apt_layer_stripped",
    src = ":database_apt_layer",
    size_budget_mb = 50,
)

stripped_layer(
    name = "database_binary_layer_stripped",
    src = ":database_binary_layer",
    size_budget_mb = 20,
)

# ── docker-database OCI image ───────────────────────────────────────────────

sonic_oci_image(
    name = "docker_database",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":database_apt_layer_stripped",
        ":database_binary_layer_stripped",
        ":database_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-database",
        "org.opencontainers.image.description": "SONiC Redis database service",
        "sonic.container.name": "database",
    },
)
