"""docker-database — SONiC Redis database service (hermetic)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "database_config_layer",
    srcs = glob(["*.sh", "*.j2", "flush_*"], allow_empty = True),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_database",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        "@bookworm_redis-server_5-7.0.15-1_deb12u6_amd64//:layer.tar.gz",
        ":database_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-database",
        "sonic.container.name": "database",
    },
)
