"""docker-dhcp-relay — SONiC DHCP relay service container.

Phase 2: collapsed to sonic-common-layer base.
Provides dhcpmon and dhcprelay binaries plus relay config scripts.
"""

load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:strip_layer.bzl", "stripped_layer")
load("//rules/bazel/j2:j2.bzl", "j2_render")

package(default_visibility = ["//visibility:public"])

# ── Jinja2 templates rendered at build time ──────────────────────────────────

j2_render(
    name = "supervisord_conf",
    template = "docker-dhcp-relay.supervisord.conf.j2",
    vars = "//files/build_vars:dhcp_relay.json",
    output = "supervisord.conf",
)

# ── Apt packages layer ───────────────────────────────────────────────────────

genrule(
    name = "dhcp_relay_apt_layer",
    srcs = [],
    outs = ["dhcp_relay_apt_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT

apt-get -y install --no-install-recommends \
  -o Dir::Cache=$$ROOTFS/var/cache/apt \
  -o Dir::State=$$ROOTFS/var/lib/apt \
  python3-psutil libpcap-dev

rm -rf $$ROOTFS/var/cache $$ROOTFS/var/lib/apt
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# ── Service debs layer ───────────────────────────────────────────────────────

genrule(
    name = "dhcp_relay_binary_layer",
    srcs = [
        "//src/dhcpmon:dhcpmon_debs",
        "//src/dhcprelay:dhcprelay_debs",
    ],
    outs = ["dhcp_relay_binary_layer.tar"],
    cmd = """
set -euo pipefail
ROOTFS=$$(mktemp -d)
trap 'rm -rf "$$ROOTFS"' EXIT
for deb in $(SRCS); do
    dpkg-deb -x "$$deb" "$$ROOTFS"
done
SOURCE_DATE_EPOCH=0 tar --sort=name --mtime=@0 \
  --owner=0 --group=0 \
  -C "$$ROOTFS" -cf $(OUTS) .
""",
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "dhcp_relay_config_layer",
    srcs = [
        ":supervisord_conf",
        "critical_processes",
        "docker_init.sh",
        "start.sh",
        # Runtime-dynamic templates:
        "dhcp-relay.monitors.j2",
        "dhcp-relay.programs.j2",
        "dhcpv4-relay.agents.j2",
        "dhcpv4-sonic-relay.agents.j2",
        "dhcpv6-relay.agents.j2",
        "port-name-alias-map.txt.j2",
        "wait_for_intf.sh.j2",
    ],
    remap_paths = {
        "supervisord.conf": "/etc/supervisor/conf.d/supervisord.conf",
        "critical_processes": "/etc/supervisor/critical_processes",
        "docker_init.sh": "/usr/local/bin/docker_init.sh",
        "start.sh": "/usr/bin/start.sh",
    },
    mode = "0755",
)

# ── Size budget enforcement ──────────────────────────────────────────────────

stripped_layer(
    name = "dhcp_relay_apt_layer_stripped",
    src = ":dhcp_relay_apt_layer",
    size_budget_mb = 30,
)

stripped_layer(
    name = "dhcp_relay_binary_layer_stripped",
    src = ":dhcp_relay_binary_layer",
    size_budget_mb = 20,
)

# ── docker-dhcp-relay OCI image ──────────────────────────────────────────────

sonic_oci_image(
    name = "docker_dhcp_relay",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":dhcp_relay_apt_layer_stripped",
        ":dhcp_relay_binary_layer_stripped",
        ":dhcp_relay_config_layer",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.title": "docker-dhcp-relay",
        "org.opencontainers.image.description": "SONiC DHCP relay service",
        "sonic.container.name": "dhcp_relay",
    },
)
