"""docker-dhcp-relay — SONiC DHCP relay service container (hermetic)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:sonic_docker.bzl", "slim_apt_layer")

package(default_visibility = ["//visibility:public"])

# ── Apt packages layer (hermetic @bookworm) ─────────────────────────────────

slim_apt_layer(
    name = "dhcp_relay_apt_slim",
    srcs = [
        "@bookworm_iproute2_6.1.0-3_amd64//:data",
        "@bookworm_python3-netifaces_0.11.0-2-p-b1_amd64//:data",
    ],
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "dhcp_relay_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
            "critical_processes",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

# ── docker-dhcp-relay OCI image ──────────────────────────────────────────────

sonic_oci_image(
    name = "docker_dhcp_relay",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":dhcp_relay_apt_slim",
        ":dhcp_relay_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-dhcp-relay",
        "sonic.container.name": "dhcp_relay",
    },
)
