"""docker-eventd — SONiC event daemon service container (hermetic)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "eventd_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
            "*.json",
            "critical_processes",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

# ── docker-eventd OCI image ─────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_eventd",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":eventd_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-eventd",
        "sonic.container.name": "eventd",
    },
)
