"""docker-fpm-frr — SONiC FRRouting (BGP/OSPF/IS-IS) service container (hermetic apt + custom .debs)."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:docker_layer.bzl", "deb_extract_layer")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:sonic_docker.bzl", "slim_apt_layer")

package(default_visibility = ["//visibility:public"])

# ── Apt packages layer (hermetic @bookworm) ─────────────────────────────────

slim_apt_layer(
    name = "fpm_frr_apt_slim",
    srcs = [
        "@bookworm_iproute2_6.1.0-3_amd64//:data",
    ],
)

# ── FRR + swss binary layer ─────────────────────────────────────────────────
# TODO: Convert //src/sonic-frr:frr_debs and //src/sonic-swss:swss_deb
#       to hermetic @bookworm packages once declared in MODULE.bazel.

deb_extract_layer(
    name = "fpm_frr_binary_layer",
    debs = [
        "//src/sonic-frr:frr_debs",
        "//src/sonic-swss:swss_deb",
    ],
    size_budget_mb = 250,
)

# ── Config + scripts layer ───────────────────────────────────────────────────

pkg_tar(
    name = "fpm_frr_config_layer",
    srcs = [
        "docker_init.sh",
        "snmp.conf",
        "TSA",
        "TSB",
        "TSC",
        "TS",
        "zsocket.sh",
        "vtysh.conf",
    ],
    mode = "0755",
)

# ── FRR template files layer ────────────────────────────────────────────────

pkg_tar(
    name = "fpm_frr_templates_layer",
    srcs = glob(["frr/**"]),
    strip_prefix = ".",
    package_dir = "/usr/share/sonic/templates",
)

# ── docker-fpm-frr OCI image ────────────────────────────────────────────────

sonic_oci_image(
    name = "docker_fpm_frr",
    base = "//dockers/docker-swss-layer-bullseye:sonic_swss_layer_bullseye",
    tars = [
        ":fpm_frr_apt_slim",
        ":fpm_frr_binary_layer",
        ":fpm_frr_config_layer",
        ":fpm_frr_templates_layer",
    ],
    entrypoint = ["/usr/bin/docker_init.sh"],
    labels = {
        "org.opencontainers.image.title": "docker-fpm-frr",
        "sonic.container.name": "bgp",
    },
)
