"""docker-fpm-frr — SONiC FRRouting (BGP/OSPF/IS-IS) service container.

Hermetic build: FRR 10.6.0 binaries from @frr (pinned sha256 in MODULE.bazel),
runtime apt packages from @bookworm (snapshot.debian.org). No Docker at build time.
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:sonic_docker.bzl", "slim_apt_layer")

package(default_visibility = ["//visibility:public"])

# ── Apt runtime packages (hermetic @bookworm) ─────────────────────────────────
slim_apt_layer(
    name = "fpm_frr_apt_slim",
    srcs = [
        "@bookworm_iproute2_6.1.0-3_amd64//:data",
        "@bookworm_libjansson4_2.14-2_amd64//:data",
        "@bookworm_libyang2_2.1.30-2_amd64//:data",
        "@bookworm_libcap2_1-2.66-4-p-deb12u2-p-b2_amd64//:data",
        "@bookworm_libreadline8_8.2-1.3_amd64//:data",
        "@bookworm_libpam0g_1.5.2-6-p-deb12u2_amd64//:data",
        "@bookworm_python3_3.11.2-1-p-b1_amd64//:data",
        "@bookworm_python3-yaml_6.0-3-p-b2_amd64//:data",
    ],
)

# ── FRR binaries layer (hermetic, from @frr repo pinned in MODULE.bazel) ──────
# FRR 10.6.0 .deb packages downloaded at fetch time from deb.frrouting.org.
# Extracted into rootfs layout, stripped, docs removed.
genrule(
    name = "fpm_frr_binary_layer",
    srcs = [
        "@frr",
        "@frr//:frr_pythontools",
    ],
    outs = ["fpm_frr_binary_layer.tar"],
    cmd = """\
set -euo pipefail
TMPDIR=$$(mktemp -d)
cleanup() { rm -rf "$$TMPDIR"; }
trap cleanup EXIT

for src in $(SRCS); do
    tar xf "$$src" -C "$$TMPDIR" 2>/dev/null || true
done

# Strip ELF binaries
if command -v strip >/dev/null 2>&1 && command -v file >/dev/null 2>&1; then
    find "$$TMPDIR" -type f | while IFS= read -r f; do
        if file "$$f" 2>/dev/null | grep -q " ELF "; then
            strip --strip-unneeded "$$f" 2>/dev/null || true
        fi
    done
fi

rm -rf "$$TMPDIR/usr/share/man" "$$TMPDIR/usr/share/doc"
find "$$TMPDIR" -type d -name "__pycache__" -exec rm -rf {} + 2>/dev/null || true

# FRR binary symlinks
if [ -d "$$TMPDIR/usr/lib/frr" ]; then
    mkdir -p "$$TMPDIR/usr/sbin"
    for f in "$$TMPDIR/usr/lib/frr/"*; do
        [ -x "$$f" ] && ln -sf "/usr/lib/frr/$$(basename $$f)" "$$TMPDIR/usr/sbin/$$(basename $$f)" || true
    done
fi

# Fix usrmerge: move ./bin/, ./sbin/, ./lib/ into ./usr/ to avoid
# shadowing base image symlinks (/bin -> /usr/bin) in OCI layers.
for d in bin sbin lib; do
    if [ -d "$$TMPDIR/$$d" ] && [ ! -L "$$TMPDIR/$$d" ]; then
        mkdir -p "$$TMPDIR/usr/$$d"
        cp -a "$$TMPDIR/$$d/." "$$TMPDIR/usr/$$d/" 2>/dev/null || true
        rm -rf "$$TMPDIR/$$d"
    fi
done
COPYFILE_DISABLE=1 tar cf "$@" -C "$$TMPDIR" .
""",
)

# ── Config + scripts layer ──────────────────────────────────────────────────
pkg_tar(
    name = "fpm_frr_config_layer",
    srcs = [
        "docker_init.sh",
        "snmp.conf",
        "TSA",
        "TSB",
        "TSC",
        "TS",
        "zsocket.sh",
        "vtysh.conf",
    ],
    mode = "0755",
)

# ── FRR template files layer ───────────────────────────────────────────────
pkg_tar(
    name = "fpm_frr_templates_layer",
    srcs = glob(["frr/**"]),
    strip_prefix = ".",
    package_dir = "/usr/share/sonic/templates",
)

# ── SONiC swss deb layer (orchagent dep for fpmsyncd) ──────────────────────
# fpm-frr needs fpmsyncd from sonic-swss and libswsscommon
genrule(
    name = "fpm_frr_swss_layer",
    srcs = [
        "@sonic_swss//:swss_deb",
        "//build/deb/sonic-swss-common:swss_common",
        "//build/deb/sonic-swss-common:python3_swsscommon",
    ],
    outs = ["fpm_frr_swss_layer.tar"],
    cmd = """\
set -euo pipefail
TMPDIR=$$(mktemp -d)
trap 'rm -rf "$$TMPDIR"' EXIT
for src in $(SRCS); do
    if [ -f "$$src" ]; then
        INNER=$$(mktemp -d)
        ar x "$$src" --output="$$INNER" 2>/dev/null || true
        for dt in "$$INNER"/data.tar.*; do
            [ -f "$$dt" ] && tar xf "$$dt" -C "$$TMPDIR" 2>/dev/null || true
        done
        rm -rf "$$INNER"
    fi
done
# Fix usrmerge: move ./bin/, ./sbin/, ./lib/ into ./usr/ to avoid
# shadowing base image symlinks (/bin -> /usr/bin) in OCI layers.
for d in bin sbin lib; do
    if [ -d "$$TMPDIR/$$d" ] && [ ! -L "$$TMPDIR/$$d" ]; then
        mkdir -p "$$TMPDIR/usr/$$d"
        cp -a "$$TMPDIR/$$d/." "$$TMPDIR/usr/$$d/" 2>/dev/null || true
        rm -rf "$$TMPDIR/$$d"
    fi
done
COPYFILE_DISABLE=1 tar cf "$@" -C "$$TMPDIR" .
""",
    tags = [],
)

# ── docker-fpm-frr OCI image ──────────────────────────────────────────────
sonic_oci_image(
    name = "docker_fpm_frr",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        ":fpm_frr_apt_slim",
        ":fpm_frr_binary_layer",
        ":fpm_frr_swss_layer",
        ":fpm_frr_config_layer",
        ":fpm_frr_templates_layer",
    ],
    entrypoint = ["/usr/bin/docker_init.sh"],
    labels = {
        "org.opencontainers.image.title": "docker-fpm-frr",
        "sonic.container.name": "bgp",
    },
)
