"""docker-fpm-gobgp — GoBGP routing service container (placeholder).

Migrated from dockers/docker-fpm-gobgp/Dockerfile.j2.
GoBGP is the alternative routing stack to FRR.
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")
load("//rules/bazel/oci:sonic_docker.bzl", "slim_apt_layer")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "gobgp_config_layer",
    srcs = glob(["*.conf", "*.j2", "*.sh"], allow_empty = True),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_fpm_gobgp",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [":gobgp_config_layer"],
    labels = {"org.opencontainers.image.title": "docker-fpm-gobgp"},
)
