load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//rules/bazel/oci:oci.bzl", "sonic_oci_image")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "iccpd_config_layer",
    srcs = glob(
        [
            "*.sh",
            "*.j2",
            "*.conf",
            "*.py",
        ],
        allow_empty = True,
    ),
    mode = "0755",
)

sonic_oci_image(
    name = "docker_iccpd",
    base = "//dockers/sonic-common-layer:sonic_common_layer",
    tars = [
        "@bookworm_iptables_1.8.9-2_amd64//:layer.tar.gz",
        ":iccpd_config_layer",
    ],
    labels = {
        "org.opencontainers.image.title": "docker-iccpd",
        "sonic.container.name": "iccpd",
    },
)
